# LabExcel

./: .gitignore  DESCRIPCION_PROYECTO.md  GITHUB_SETUP.md  INSTRUCCIONES_NGROK.md  ISSUES.md  NOTAS_DESARROLLO.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
archivos/: OT-1422-Geofal - LEM.csv  REC Nº 1384-25 MEGAMINTAJE.csv
backend/: CAMBIOS_CODIGO_MUESTRA_LEM.md  CAMBIOS_EXCEL_MAPEOS.md  capture_frontend_data.py  config.py  database.py  debug_422.py  debug_excel_structure.py  debug_row_start.py  env.example  export_database.py  export_database_simple.py  insert_real_data.py  main.py  migrate_codigo_lem_data.py  migrate_database.py  migrate_muestras_verificadas.py  migrate_to_recepcion.py  migrate_verificacion_equipos.py  minimal_server.py  models.py  pyproject.toml  requirements.txt  schemas.py  simple_migrate.py  simple_migrate_recepcion.py  simple_server.py  test_db_connection.py  test_excel_fixed.py  test_server.py  verificar_template.py
backend/backend/output/: VERIFICACION CONCRETO - AUTOMATIZADO(pedro).xlsx  verificacion_muestras_20251028_172358.xlsx  verificacion_muestras_20251028_172848.xlsx  verificacion_muestras_20251028_174115.xlsx  verificacion_muestras_20251028_175305.xlsx  verificacion_muestras_20251028_180138.xlsx  verificacion_muestras_20251028_182239.xlsx  verificacion_muestras_20251028_182303.xlsx  verificacion_muestras_20251028_183201.xlsx  verificacion_muestras_20251028_183308.xlsx
backend/database_export/: CHANGELOG.md  backup_final_20251017_180152.json  backup_latest.json  project_structure.json
backend/output/: control_concreto_20251027_123702.xlsx  control_concreto_20251027_123840.xlsx  control_concreto_20251027_124138.xlsx  control_concreto_20251027_125034.xlsx  control_concreto_20251027_125200.xlsx  control_concreto_20251027_125621.xlsx  control_concreto_20251027_141757.xlsx
backend/services/: __init__.py  concreto_excel_service.py  excel_collaborative_service.py  excel_collaborative_service_backup.py  excel_service.py  footer_functions.py  html_pdf_service.py  orden_service.py  ot_excel_collaborative_service.py  ot_excel_service.py  ot_service.py  pdf_service.py  simple_pdf_service.py  verificacion_excel_service.py  verificacion_service.py
backend/templates/: VERIFICACION CONCRETO - AUTOMATIZADO.xlsx  orden_trabajo_template.py  orden_trabajo_template.xlsx  recepcion_muestra_template.py  recepcion_template.xlsx
backend/templates/VERIFICACION CONCRETO - AUTOMATIZADO/: F-LEM-P-01.12 V03 VERIFICACIÓN CONCRETO.xlsx
backend/templates/concreto/: CONTROL CONCRETO.xlsx
backend/utils/: excel_validator.py  exceptions.py  file_handler.py  logger.py  validators.py
docker/: Dockerfile.backend  Dockerfile.frontend  init.sql  nginx.conf
docs/: API.md  DEPLOYMENT.md
frontend/: db-proxy.js  env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DeleteModal.tsx  ErrorModal.tsx  Layout.tsx
frontend/src/constants/: index.ts
frontend/src/hooks/: useAutoSave.ts  useAutoSaveDB.ts
frontend/src/pages/: ControlConcretoDetail.tsx  ControlConcretoForm.tsx  ControlConcretoList.tsx  (+12 more)
(+11 files in other folders)
